--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Posts do blog da Kenzie">
+    <meta name="author" content="Kenzie">
+    <title>Blog da Kenzie</title>
+</head>
+
+<body>
+    <!-- Primeiro post -->
+    <article>
+        <h2>Windows, Linux ou Mac OS?</h2>
+        <p>Descubra qual é o sistema operacional mais adequado para o seu negócio. O mundo da tecnologia está cheio de
+            opções, mas nem sempre é fácil escolher o melhor sistema operacional para a sua empresa. Neste post, vamos
+            comparar as principais opções de sistemas operacionais para ajudá-lo a tomar a decisão certa. Escrito por
+            Kenzie.</p>
+        <a href="https://kenzie.com.br/blog/windows-linux-ou-mac-os/">Leia mais</a>
+    </article>
+    <!-- Segundo post -->
+    <article>
+        <h2>Título do Segundo Post</h2>
+        <p>Descrição do segundo post com máximo de 200 caracteres. Escrito por Autor do Segundo Post</p>
+        <a href="#">Leia mais</a>
+    </article>
+    <!-- Terceiro post -->
+    <article>
+        <h2>Título do Terceiro Post</h2>
+        <p>Descrição do terceiro post com máximo de 200 caracteres. Escrito por Autor do Terceiro Post</p>
+        <a href="#">Leia mais</a>
+    </article>
+    <!-- Quarto post -->
+    <article>
+        <h2>Título do Quarto Post</h2>
+        <p>Descrição do quarto post com máximo de 200 caracteres. Escrito por Autor do Quarto Post</p>
+        <a href="#">Leia mais</a>
+    </article>
+    <!-- Formulário para a newsletter -->
+    <section>
+        <h2>Deseja receber nossas notícias em primeira mão?</h2>
+        <p>Inscreva-se em nossa newsletter e receba todas as novidades e novas postagens diretamente em seu e-mail!</p>
+        <form>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" required>
+            <input type="submit" value="Assinar">
+        </form>
+    </section>
+</body>
+
+</html>
+``
