--- a/index.html
+++ b/index.html
@@ -13,28 +13,48 @@
     <!-- Primeiro post -->
     <article>
         <h2>Windows, Linux ou Mac OS?</h2>
-        <p>Descubra qual é o sistema operacional mais adequado para o seu negócio. O mundo da tecnologia está cheio de
+
+        <p>Qual sistema operacional é melhor: Windows, Linux ou Mac OS?
+            Descubra qual é o sistema operacional mais adequado para o seu negócio. O mundo da tecnologia está cheio de
             opções, mas nem sempre é fácil escolher o melhor sistema operacional para a sua empresa. Neste post, vamos
-            comparar as principais opções de sistemas operacionais para ajudá-lo a tomar a decisão certa. Escrito por
-            Kenzie.</p>
+            comparar as principais opções de sistemas operacionais para ajudá-lo a tomar a decisão certa.</p>
+
+        <p>scolher um computador é mais do que selecionar componentes e ir à loja. É preciso entender o produto e seu
+            sistema operacional, que é um dos elementos mais importantes. Muitos ficam indecisos sobre qual sistema
+            operacional escolher: Windows, Linux ou Mac OS. Para cada necessidade do usuário, há um sistema operacional
+            apropriado que atenderá a seus objetivos da melhor forma. Neste artigo, vamos examinar cada sistema
+            operacional e ajudar você a tomar uma decisão ao escolher o sistema operacional do seu computador. </p>
+
+
         <a href="https://kenzie.com.br/blog/windows-linux-ou-mac-os/">Leia mais</a>
     </article>
     <!-- Segundo post -->
     <article>
-        <h2>Título do Segundo Post</h2>
-        <p>Descrição do segundo post com máximo de 200 caracteres. Escrito por Autor do Segundo Post</p>
+        <h2>O que é um sistema operacional e para que ele serve?</h2>
+        <p>O sistema operacional é o "cérebro" do computador, controlando todos os outros programas e partes da máquina.
+            Ele é responsável por armazenar informações e controlar o processador. Com uma interface gráfica amigável, o
+            sistema operacional facilita o uso do computador pelo usuário. Existem sistemas operacionais para desktops e
+            dispositivos móveis, como Android e IOS.</p>
         <a href="#">Leia mais</a>
     </article>
     <!-- Terceiro post -->
     <article>
-        <h2>Título do Terceiro Post</h2>
-        <p>Descrição do terceiro post com máximo de 200 caracteres. Escrito por Autor do Terceiro Post</p>
+        <h2>Qual o melhor sistema operacional para você?</h2>
+        <p>Não há um sistema operacional perfeito, todos têm suas próprias características que se destacam em diferentes
+            situações. O usuário deve entender suas necessidades e objetivos com a máquina para escolher o melhor
+            sistema operacional.</p>
         <a href="#">Leia mais</a>
     </article>
     <!-- Quarto post -->
     <article>
-        <h2>Título do Quarto Post</h2>
-        <p>Descrição do quarto post com máximo de 200 caracteres. Escrito por Autor do Quarto Post</p>
+        <h2>Qual a diferença entre os sistemas operacionais Windows, Linux e Mac OS?</h2>
+        <p>Windows é um sistema operacional popular, criado e gerenciado pela Microsoft. É compatível com vários tipos
+            de computadores e oferece recursos de redes e jogos. Ele é uma boa opção para usuários que procuram uma
+            solução prática e viável. Mac OS, por outro lado, é limitado apenas aos Macbooks e é gratuito. Já o Linux é
+            um sistema operacional de código aberto, popular entre desenvolvedores. Ele permite ao usuário uma maior
+            autonomia e pode ser personalizado. As distribuições do Linux incluem Ubuntu, Fedora, entre outras, e são
+            projetadas para fins específicos. Em resumo, a escolha de um sistema operacional depende das necessidades e
+            preferências de cada usuário.</p>
         <a href="#">Leia mais</a>
     </article>
     <!-- Formulário para a newsletter -->
