--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             opções, mas nem sempre é fácil escolher o melhor sistema operacional para a sua empresa. Neste post, vamos
             comparar as principais opções de sistemas operacionais para ajudá-lo a tomar a decisão certa.</p>
 
-        <p>scolher um computador é mais do que selecionar componentes e ir à loja. É preciso entender o produto e seu
+        <p>Escolher um computador é mais do que selecionar componentes e ir à loja. É preciso entender o produto e seu
             sistema operacional, que é um dos elementos mais importantes. Muitos ficam indecisos sobre qual sistema
             operacional escolher: Windows, Linux ou Mac OS. Para cada necessidade do usuário, há um sistema operacional
             apropriado que atenderá a seus objetivos da melhor forma. Neste artigo, vamos examinar cada sistema
